# eternal_iterator

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
