[package]
name = "eternal_iterator"
version = "0.1.3"
authors = ["Yasuo Ozu <yasuo@ozu.email>"]
license = "MIT"
edition = "2018"
description = "Trait implementation to promise that the iterator iterates forever."
readme = "README.md"
repository = "https://github.com/yasuo-ozu/eternal_iterator"
keywords = ["iterator", "data-structure"]
categories = ["algorithms", "rust-patterns"]
rust-version = "1.54"

[dependencies]
